# Website

./: .dockerignore  .env.example  .gitignore  AI_Brand_Guidelines.md  Actuators_Landing_Page.md  Cargo.toml  Dockerfile  README.md  app.js  brand_guidelines.html  docker-compose.yml  index.html  motion_identity.html  package.json  railway.json  styles.css  tailwind.config.js  translations.js
.agent/workflows/: run-project.md
.claude/: launch.json
.github/workflows/: ci.yml
admin/: index.html
agents/: index.html
api/: claude.js
docs/: Actuators-import.surql  Actuators.surql
legacy-marketing/: admin.html  app.js  styles.css
locales/: ar.json  en.json
src/: config.rs  i18n.rs  lib.rs  main.rs
src/db/: dummy_data.surql  live.rs  mod.rs  schema.surql  seed.rs
src/domains/: mod.rs
src/domains/agent/: handlers.rs  mod.rs  models.rs  repository.rs  service.rs
src/domains/catalog/: handlers.rs  models.rs  repository.rs
src/domains/crm/: handlers.rs  models.rs  repository.rs
src/domains/customers/: handlers.rs  models.rs  repository.rs
src/domains/documents/: handlers.rs  models.rs  repository.rs
src/domains/email/: handlers.rs  mod.rs  models.rs  repository.rs  service.rs
src/domains/finance/: handlers.rs  models.rs  repository.rs
src/domains/hr/: handlers.rs  mod.rs  models.rs  repository.rs  utils.rs
src/domains/hr_compliance/: handlers.rs  models.rs  repository.rs
src/domains/hr_org/: handlers.rs  models.rs  repository.rs
src/domains/inventory_adv/: handlers.rs  models.rs  repository.rs
src/domains/leave/: handlers.rs  models.rs  repository.rs
src/domains/machinery/: handlers.rs  models.rs  repository.rs
src/domains/manufacturing/: handlers.rs  models.rs  repository.rs
src/domains/payroll_adv/: handlers.rs  models.rs  repository.rs
src/domains/projects_adv/: handlers.rs  models.rs  repository.rs
src/domains/store/: handlers.rs  mod.rs  models.rs  repository.rs  service.rs
src/domains/training/: handlers.rs  models.rs  repository.rs
src/domains/videos/: handlers.rs  mod.rs  models.rs  repository.rs
src/middleware/: agent_auth.rs  auth.rs  csrf.rs  device_auth.rs  mod.rs  rate_limit.rs  validation.rs
src/models/: account.rs  asset.rs  mod.rs
src/web/: admin.rs  mod.rs  public.rs
src/web/api/: accounts.rs  assets.rs  attendance.rs  auth.rs  backup.rs  certificates.rs  charts.rs  clients.rs  devices.rs  employees.rs  mod.rs  (+13 more)
src/ws/: live_updates.rs  mod.rs
templates/: about.html  base.html  index.html  services.html  verify.html
templates/admin/: accounts.html  agents.html  assets.html  attendance.html  audit_log.html  base_admin.html  catalog.html  certificates.html  compliance.html  crm.html  customers.html  dashboard.html  document_view.html  email.html  employees.html  events.html  forgot_password.html  hr_org.html  inventory.html  invoices.html  leave.html  login.html  machines.html  manufacturing.html  notifications.html  org_register.html  organizations.html  payroll.html  profile.html  projects.html  projects_board.html  register.html  repairs.html  reset_password.html  store.html  trainees.html  training.html  verify_email.html  videos.html
templates/components/: card.html  chart_bar.html  chart_donut.html  command_palette.html  modal.html  pagination.html  stat.html
templates/errors/: 403.html  404.html  500.html
templates/fragments/: asset_list.html  asset_row.html  attendance_list.html  attendance_row.html  certificate_row.html  client_list.html  client_row.html  employee_list.html  employee_row.html  invoice_list.html  invoice_row.html  kpi_dashboard.html  machine_list.html  machine_row.html  project_list.html  project_row.html  repair_list.html  repair_row.html  trainee_list.html  trainee_row.html  verify_result.html
tests/: basic_tests.rs
